--- a/assets/sass/objects/container.scss
+++ b/assets/sass/objects/container.scss
@@ -17,7 +17,7 @@ $container-inner-pad-mob: 0 1.25rem;
     max-width: 100vw;
     height: fit-content;
     justify-content: center;
-
+    flex-direction: row;
     &--primary {
         background: $primary;
     }
@@ -45,15 +45,18 @@ $container-inner-pad-mob: 0 1.25rem;
         flex-direction: row;
         max-width: $container-inner-maxwidth;
         padding: $container-inner-pad-mob;
-
+        margin: 0 auto;
         &--narrow {
-            max-width: calc($container-inner-maxwidth - 400px);
-            background-color: red;
+            max-width: 860px;
         }
 
         @include md {
             padding: $container-inner-pad;
         }
+    }
+
+    @include md {
+        flex-direction: row;
     }
 }
 
