--- a/assets/sass/variables/padding.scss
+++ b/assets/sass/variables/padding.scss
@@ -15,7 +15,7 @@
     }
 
     &--top {
-        padding: 2.5rem 0 0 0;
+        padding:2.5rem 2.5rem 0 2.5rem;
     }
 
     &--right {
@@ -23,7 +23,7 @@
     }
 
     &--bottom {
-        padding: 0 0 2.5rem 0;
+        padding: 0 2.5rem 2.5rem 2.5rem ;
     }
 
     &--left {
@@ -47,7 +47,7 @@
         }
 
         &--top {
-            padding: 1.5rem 0 0 0;
+            padding-top: 1.5rem;
         }
     
         &--right {
@@ -55,7 +55,7 @@
         }
     
         &--bottom {
-            padding: 0 0 1.5rem 0;
+            padding-bottom:1.5rem ;
         }
     
         &--left {
